Some markup fixes for checkout.

--- a/app/views/spree/checkout/_payment.html.erb
+++ b/app/views/spree/checkout/_payment.html.erb
@@ -32,6 +32,6 @@
 <br class="space" />
 
 <div class="form-buttons" data-hook="buttons">
-  <%= submit_tag Spree.t(:save_and_continue), :class => 'continue button primary' %>
+  <%= submit_tag Spree.t(:save_and_continue), :class => 'btn-primary' %>
   <script>Spree.disableSaveOnClick();</script>
 </div>
