--- a/app/views/spree/layouts/spree_application.html.erb
+++ b/app/views/spree/layouts/spree_application.html.erb
@@ -13,7 +13,7 @@
 
       <%= render :partial => 'spree/shared/header' %>
 
-      <div id="wrapper" class="row" data-hook>
+      <div id="wrapper" class="row-fluid" data-hook>
 
         <%= breadcrumbs(@taxon) %>
 
