--- a/app/views/spree/shared/_main_nav_bar.html.erb
+++ b/app/views/spree/shared/_main_nav_bar.html.erb
@@ -1,4 +1,4 @@
-<nav class="columns sixteen">
+<nav class="row-fluid">
   <ul id="main-nav-bar" class="inline" data-hook>
     <li id="home-link" data-hook><%= link_to Spree.t(:home), spree.root_path %></li>
     <li id="link-to-cart" data-hook><%= link_to_cart %></li>
