--- a/app/views/spree/shared/_sidebar.html.erb
+++ b/app/views/spree/shared/_sidebar.html.erb
@@ -1,3 +1,3 @@
-<aside id="sidebar" class="columns four" data-hook>
+<aside id="sidebar" class="span4" data-hook>
   <%= yield :sidebar %>
 </aside>
