--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -1,6 +1,6 @@
-<footer id="footer" class="sixteen columns" data-hook>
-  <div id="footer-left" class="columns alpha eight" data-hook>
+<footer id="footer" class="row-fluid" data-hook>
+  <div id="footer-left" class="span6" data-hook>
     <p><%= Spree.t :powered_by  %> <%= link_to 'Spree', 'http://spreecommerce.com/' %></p>
   </div>
-  <div id="footer-right" class="columns omega eight" data-hook></div>
+  <div id="footer-right" class="span6" data-hook></div>
 </footer>
