--- a/app/views/spree/layouts/spree_application.html.erb
+++ b/app/views/spree/layouts/spree_application.html.erb
@@ -17,13 +17,14 @@
 
         <%= breadcrumbs(@taxon) %>
 
-        <%= render :partial => 'spree/shared/sidebar' if content_for? :sidebar %>
+        <div class='row-fluid'>
+          <%= render :partial => 'spree/shared/sidebar' if content_for? :sidebar %>
 
-        <div id="content" class="span<%= !content_for?(:sidebar) ? "12" : "8" %>" data-hook>
-          <%= flash_messages %>
-          <%= yield %>
+          <div id="content" class="span<%= !content_for?(:sidebar) ? "12" : "8" %>" data-hook>
+            <%= flash_messages %>
+            <%= yield %>
+          </div>
         </div>
-
       </div>
 
       <%= render :partial => 'spree/shared/footer' %>
