Selectors for registration and signin that are shared with skeleton.

--- a/app/assets/stylesheets/store/spree_bootstrap.scss
+++ b/app/assets/stylesheets/store/spree_bootstrap.scss
@@ -49,6 +49,21 @@
     margin-left: auto;
     margin-right: auto;
   }
+
+  .container .eight.columns {
+    width: 460px;
+  }
+
+  .container .column, .container .columns {
+    float: left;
+    display: inline;
+    margin-left: 10px;
+    /*margin-right: 10px;*/
+  }
+
+  .column.omega, .columns.omega {
+    margin-right: 0;
+  }
 }
 
 
