--- a/app/views/spree/checkout/registration.html.erb
+++ b/app/views/spree/checkout/registration.html.erb
@@ -1,11 +1,11 @@
 <%= render :partial => 'spree/shared/error_messages', :locals => { :target => @user } %>
 <h1><%= Spree.t(:registration) %></h1>
 <div id="registration" data-hook>
-  <div id="account" class="columns alpha eight">
+  <div id="account" class="span6">
     <!-- TODO: add partial with registration form -->
   </div>
   <% if Spree::Config[:allow_guest_checkout] %>
-    <div id="guest_checkout" data-hook class="columns omega eight">
+    <div id="guest_checkout" data-hook class="span6">
       <%= render :partial => 'spree/shared/error_messages', :locals => { :target => @order } %>
       <h6><%= Spree.t(:guest_user_account) %></h6>
       <%= form_for @order, :url => update_checkout_registration_path, :method => :put, :html => { :id => 'checkout_form_registration' } do |f| %>
