Lets use font awesome because it's awesome.

--- a/app/assets/stylesheets/store/spree_bootstrap.scss
+++ b/app/assets/stylesheets/store/spree_bootstrap.scss
@@ -2,8 +2,9 @@
  *= require store/spree_frontend
 */
 
-@import "bootstrap";
-@import "bootstrap-responsive";
+@import 'bootstrap';
+@import 'bootstrap-responsive';
+@import 'font-awesome';
 
 /* Cancel out default spree styles */
 
