--- a/app/views/spree/products/show.html.erb
+++ b/app/views/spree/products/show.html.erb
@@ -1,7 +1,7 @@
 <div data-hook="product_show" itemscope itemtype="http://schema.org/Product">
   <% @body_id = 'product-details' %>
 
-  <div class="columns six alpha" data-hook="product_left_part">
+  <div class="span4 alpha" data-hook="product_left_part">
     <div class="row" data-hook="product_left_part_wrap">
 
       <div id="product-images" data-hook="product_images">
@@ -24,7 +24,7 @@
     </div>
   </div>
 
-  <div class="columns ten omega" data-hook="product_right_part">
+  <div class="span8 omega" data-hook="product_right_part">
     <div class="row" data-hook="product_right_part_wrap">
 
       <div id="product-description" data-hook="product_description">
