--- a/app/views/spree/products/_image.html.erb
+++ b/app/views/spree/products/_image.html.erb
@@ -1,5 +1,5 @@
-<% if image %> 
-  <%= image_tag image.attachment.url(:product), :itemprop => "image" %>
+<% if defined?(image) && image %>
+    <%= image_tag image.attachment.url(:product), :itemprop => "image" %>
 <% else %>
-  <%= product_image(@product, :itemprop => "image") %>
+    <%= product_image(@product, :itemprop => "image") %>
 <% end %>
