--- a/app/views/spree/shared/_order_details.html.erb
+++ b/app/views/spree/shared/_order_details.html.erb
@@ -83,15 +83,15 @@
         <td class="total"><span id="order_total"><%= @order.display_total.to_html %></span></td>
       </tr>
     </tfoot>
-    <% if order.price_adjustment_totals.present? %>
-      <tfoot id="price-adjustments" data-hook="order_details_price_adjustments">
-        <% @order.price_adjustment_totals.each do |key, total| %>
-          <tr class="total">
-            <td colspan="4"><strong><%= key %></strong></td>
-            <td class="total"><span><%= total %></span></td>
-          </tr>
+    <% if order.line_item_adjustment_totals.present? %>
+        <tfoot id="price-adjustments" data-hook="order_details_price_adjustments">
+        <% @order.line_item_adjustment_totals.each do |key, total| %>
+            <tr class="total">
+              <td colspan="4"><strong><%= key %></strong></td>
+              <td class="total"><span><%= total %></span></td>
+            </tr>
         <% end %>
-      </tfoot>
+        </tfoot>
     <% end %>
     <tfoot id="subtotal" data-hook="order_details_subtotal">
       <tr class="total" id="subtotal-row">
