--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -7,19 +7,25 @@
         <ul>
           <% @product.variants_and_option_values(current_currency).each_with_index do |variant, index| %>
             <li>
-              <%= radio_button_tag "products[#{@product.id}]", variant.id, index == 0, 'data-price' => variant.price_in(current_currency).display_price %>
-              <label for="<%= ['products', @product.id, variant.id].join('_') %>">
+              <%= radio_button_tag "variant_id", variant.id, index == 0, 'data-price' => Spree::Money.new(variant.price, with_currency: true).to_s  %>
+              <%= label_tag "variant_id" do %>
                 <span class="variant-description">
                   <%= variant_options variant %>
                 </span>
                 <% if variant_price variant %>
                   <span class="price diff"><%= variant_price variant %></span>
                 <% end %>
-              </label>
+
+                <% unless variant.can_supply? %>
+                  <span class="out-of-stock"><%= Spree.t(:out_of_stock) %></span>
+                <% end %>
+              <% end %>
             </li>
           <% end%>
         </ul>
       </div>
+    <% else %>
+      <%= hidden_field_tag "variant_id", @product.master.id %>
     <% end%>
 
     <% if @product.price_in(current_currency) and !@product.price.nil? %>
@@ -27,12 +33,23 @@
         
         <div id="product-price">
           <h6 class="product-section-title"><%= Spree.t(:price) %></h6>
-          <div><span class="price selling" itemprop="price"><%= display_price(@product) %></span></div>
+          <div>
+            <span class="price selling" itemprop="price">
+              <%= display_price(@product) %>
+            </span>
+            <span itemprop="priceCurrency" content="<%= @product.currency %>"></span>
+          </div>
+
+          <% if @product.master.can_supply? %>
+            <link itemprop="availability" href="http://schema.org/InStock" />
+          <% else %>
+            <br />
+            <span class="out-of-stock"><%= Spree.t(:out_of_stock) %></span>
+          <% end %> 
         </div>
 
         <div class="add-to-cart">
-          <%= number_field_tag (@product.variants_and_option_values.any? ? :quantity : "variants[#{@product.master.id}]"),
-            1, :class => 'title', :min => 1 %>
+          <%= number_field_tag :quantity, 1, :class => 'title', :min => 1 %>
           <%= button_tag :class => 'large primary', :id => 'add-to-cart-button', :type => :submit do %>
             <%= Spree.t(:add_to_cart) %>
           <% end %>
@@ -43,6 +60,6 @@
           <br>
           <div><span class="price selling" itemprop="price"><%= Spree.t('product_not_available_in_this_currency') %></span></div>
         </div>
-    <% end %>    
+    <% end %>
   </div>
 <% end %>
